updated at: 2020-02-20 20:46, 【瓶とか袋とか】VORPAL&#39;s Accesories Set【2020/02/20 V1.5 rollout】 - - BOOTH

--- a/VRChat/21/1013021.html
+++ b/VRChat/21/1013021.html
@@ -3,29 +3,29 @@
   <head>
     <meta charset="utf-8">
     <title>
-      【瓶とか袋とか】VORPAL's Accesories Set【2018/10/29update】 - Virtual -
+      【瓶とか袋とか】VORPAL's Accesories Set【2020/02/20 V1.5 rollout】 - -
       BOOTH
     </title>
     <meta name="description" content=
-    "本商品はちょっとしたお出かけや旅のお供におすすめの、バッグや瓶、携帯短槍のセットです。ぜひ気軽にくっつけてお楽しみください。 ☆アップデート情報 2018/10/29　かんたんランタン追加。購入済みの方は無料でダウンロードできます。 ☆商品内容 ●VORPAL's Accesories Set.unitypackage ・EXbag（超ローポリの四角いポーチ。幅の違いで2種。24三角面） ・Glassbottle（バンドが付いたガラス瓶。液体メッシュのあるものと空のもの２種。液入り瓶756三角面、空瓶712三角面）">
+    "本商品はちょっとしたお出かけや旅のお供におすすめの、バッグや瓶、携帯短槍のセットです。ぜひ気軽にくっつけてお楽しみください。">
     <meta name="keywords" content=
     "booth, ブース, pixiv, ピクシブ, イラスト, マンガ, 創作, オンラインストア, オンラインショップ, ネットショップ, ec, ネット通販">
     <link rel="canonical" href="https://booth.pm/ja/items/1013021">
     <meta name="twitter:site" content="booth_pm">
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:title" content=
-    "【瓶とか袋とか】VORPAL's Accesories Set【2018/10/29update】 - Virtual - BOOTH">
+    "【瓶とか袋とか】VORPAL's Accesories Set【2020/02/20 V1.5 rollout】 - - BOOTH">
     <meta name="twitter:description" content=
-    "本商品はちょっとしたお出かけや旅のお供におすすめの、バッグや瓶、携帯短槍のセットです。ぜひ気軽にくっつけてお楽しみください。 ☆アップデート情報 2018/10/29　かんたんランタン追加。購入済みの方は無料でダウンロードできます。 ☆商品内容 ●VORPAL's Accesories Set.unitypackage ・EXbag（超ローポリの四角いポーチ。幅の違いで2種。24三角面） ・Glassbottle（バンドが付いたガラス瓶。液体メッシュのあるものと空のもの２種。液入り瓶756三角面、空瓶712三角面）">
+    "本商品はちょっとしたお出かけや旅のお供におすすめの、バッグや瓶、携帯短槍のセットです。ぜひ気軽にくっつけてお楽しみください。">
     <meta name="twitter:image" content=
-    "https://booth.pximg.net/c/620x620/fa82e193-d955-433b-bbee-7ce669773ee2/i/1013021/bdda2c92-2de4-4427-862a-0002ff5d8fd5_base_resized.jpg">
+    "https://booth.pximg.net/c/620x620/fa82e193-d955-433b-bbee-7ce669773ee2/i/1013021/add1ff68-a715-4ce2-adf2-1f16be0144eb_base_resized.jpg">
     <meta property="og:type" content="product">
     <meta property="og:title" content=
-    "【瓶とか袋とか】VORPAL's Accesories Set【2018/10/29update】 - Virtual - BOOTH">
+    "【瓶とか袋とか】VORPAL's Accesories Set【2020/02/20 V1.5 rollout】 - - BOOTH">
     <meta property="og:description" content=
-    "本商品はちょっとしたお出かけや旅のお供におすすめの、バッグや瓶、携帯短槍のセットです。ぜひ気軽にくっつけてお楽しみください。 ☆アップデート情報 2018/10/29　かんたんランタン追加。購入済みの方は無料でダウンロードできます。 ☆商品内容 ●VORPAL's Accesories Set.unitypackage ・EXbag（超ローポリの四角いポーチ。幅の違いで2種。24三角面） ・Glassbottle（バンドが付いたガラス瓶。液体メッシュのあるものと空のもの２種。液入り瓶756三角面、空瓶712三角面）">
+    "本商品はちょっとしたお出かけや旅のお供におすすめの、バッグや瓶、携帯短槍のセットです。ぜひ気軽にくっつけてお楽しみください。">
     <meta property="og:image" content=
-    "https://booth.pximg.net/c/620x620/fa82e193-d955-433b-bbee-7ce669773ee2/i/1013021/bdda2c92-2de4-4427-862a-0002ff5d8fd5_base_resized.jpg">
+    "https://booth.pximg.net/c/620x620/fa82e193-d955-433b-bbee-7ce669773ee2/i/1013021/add1ff68-a715-4ce2-adf2-1f16be0144eb_base_resized.jpg">
     <meta property="og:url" content=
     "https://booth.pm/ja/items/1013021">
     <meta name="ga:shop" content="UA-127800457-1">
@@ -146,7 +146,7 @@
                         <h2 class=
                         "u-text-wrap u-tpg-title1 u-mt-0 u-mb-400">
                           【瓶とか袋とか】VORPAL's Accesories
-                          Set【2018/10/29update】
+                          Set【2020/02/20 V1.5 rollout】
                         </h2>
                         <div class="item-summary__caption"></div>
                       </header>
@@ -239,7 +239,7 @@
                           "https://booth.pm/ja/items/1013021"
                           data-lang="ja" data-hashtags="booth_pm"
                           data-text=
-                          "【瓶とか袋とか】VORPAL's Accesories Set【2018/10/29update】 | Virtual Vapeshop VORPAL"
+                          "【瓶とか袋とか】VORPAL's Accesories Set【2020/02/20 V1.5 rollout】 | Virtual Vapeshop VORPAL"
                           data-count="none" class=
                           "twitter-share-button" href=
                           "https://twitter.com/share">ツイート</a>
@@ -259,9 +259,19 @@
                           <div class=
                           "market-item-detail-item-image-wrapper">
                             <img alt=
-                            "【瓶とか袋とか】VORPAL's Accesories Set【2018/10/29update】"
+                            "【瓶とか袋とか】VORPAL's Accesories Set【2020/02/20 V1.5 rollout】"
                             class="market-item-detail-item-image"
                             src=
+                            "https://booth.pximg.net/fa82e193-d955-433b-bbee-7ce669773ee2/i/1013021/add1ff68-a715-4ce2-adf2-1f16be0144eb_base_resized.jpg">
+                          </div>
+                        </div>
+                        <div>
+                          <div class=
+                          "market-item-detail-item-image-wrapper">
+                            <img alt=
+                            "【瓶とか袋とか】VORPAL's Accesories Set【2020/02/20 V1.5 rollout】"
+                            class="market-item-detail-item-image"
+                            data-lazy=
                             "https://booth.pximg.net/fa82e193-d955-433b-bbee-7ce669773ee2/i/1013021/bdda2c92-2de4-4427-862a-0002ff5d8fd5_base_resized.jpg">
                           </div>
                         </div>
@@ -269,7 +279,7 @@
                           <div class=
                           "market-item-detail-item-image-wrapper">
                             <img alt=
-                            "【瓶とか袋とか】VORPAL's Accesories Set【2018/10/29update】"
+                            "【瓶とか袋とか】VORPAL's Accesories Set【2020/02/20 V1.5 rollout】"
                             class="market-item-detail-item-image"
                             data-lazy=
                             "https://booth.pximg.net/fa82e193-d955-433b-bbee-7ce669773ee2/i/1013021/b06a7f0e-9adf-4d31-b18f-445e92826dcf_base_resized.jpg">
@@ -279,7 +289,7 @@
                           <div class=
                           "market-item-detail-item-image-wrapper">
                             <img alt=
-                            "【瓶とか袋とか】VORPAL's Accesories Set【2018/10/29update】"
+                            "【瓶とか袋とか】VORPAL's Accesories Set【2020/02/20 V1.5 rollout】"
                             class="market-item-detail-item-image"
                             data-lazy=
                             "https://booth.pximg.net/fa82e193-d955-433b-bbee-7ce669773ee2/i/1013021/0880eaf0-727f-4ad8-b777-1607393cbd08_base_resized.jpg">
@@ -289,7 +299,7 @@
                           <div class=
                           "market-item-detail-item-image-wrapper">
                             <img alt=
-                            "【瓶とか袋とか】VORPAL's Accesories Set【2018/10/29update】"
+                            "【瓶とか袋とか】VORPAL's Accesories Set【2020/02/20 V1.5 rollout】"
                             class="market-item-detail-item-image"
                             data-lazy=
                             "https://booth.pximg.net/fa82e193-d955-433b-bbee-7ce669773ee2/i/1013021/26071cf2-a4a9-4ad2-a552-e6786f591c72_base_resized.jpg">
@@ -298,6 +308,10 @@
                       </div>
                       <div class="primary-image-thumbnails">
                         <a class="pointer">
+                        <div class="slick-thumbnail-border">
+                          <img src=
+                          "https://booth.pximg.net/c/72x72_a2_g5/fa82e193-d955-433b-bbee-7ce669773ee2/i/1013021/add1ff68-a715-4ce2-adf2-1f16be0144eb_base_resized.jpg">
+                        </div></a><a class="pointer">
                         <div class="slick-thumbnail-border">
                           <img src=
                           "https://booth.pximg.net/c/72x72_a2_g5/fa82e193-d955-433b-bbee-7ce669773ee2/i/1013021/bdda2c92-2de4-4427-862a-0002ff5d8fd5_base_resized.jpg">
@@ -320,40 +334,6 @@
                         "js-market-item-detail-description">
                           <p class="autolink u-text-wrap">
                             本商品はちょっとしたお出かけや旅のお供におすすめの、バッグや瓶、携帯短槍のセットです。ぜひ気軽にくっつけてお楽しみください。
-                            ☆アップデート情報
-                            2018/10/29　かんたんランタン追加。購入済みの方は無料でダウンロードできます。
-                            ☆商品内容 ●VORPAL's Accesories
-                            Set.unitypackage
-                            ・EXbag（超ローポリの四角いポーチ。幅の違いで2種。24三角面）
-                            ・Glassbottle（バンドが付いたガラス瓶。液体メッシュのあるものと空のもの２種。液入り瓶756三角面、空瓶712三角面）
-                            ・Scrollandbag（手紙？の入った袋。ストレートなものと曲がったもの2種。1656三角面）
-                            ・yari（伸縮機能のある携帯短槍。穂先は液体金属製。シェイプキーで伸縮。290三角面）
-                            ●KantanLantern.unitypackage
-                            ローポリのランタンが入っています。オブジェクト数2、マテリアル数2、630三角面。prefabにはポイントライトが入っており、光ります。
-                            ※各アクセサリにはDynamicBone用のボーンが仕込んであります。別途ご用意の上導入してください。
-                            ※空瓶の方には、phi16さんの「傾く水　tilted_drink」を組み合わせて液面の傾きを表現できます（　https://github.com/phi16/VRC_storage　）。が、DynamicBoneとの併用は困難を極めます。作者はできませんでした。できる方は教えてください。
-                            ※使用シェーダーはStandardのMetalicです。板テクスチャ部分のマテリアル（UnityのSceneにそのまま出したときピンク色になる部分）は、動く城のフィオさんのカリングオフシェーダー（　https://phio.booth.pm/items/978750　）推奨です。
-                            ☆利用規約 ◇VORPAL's Accesories
-                            Set（以下本モデル）の利用者は本モデルの利用をもってこの規約を読了し同意したものとみなします。
-                            ◇本モデルを利用したことによって生じるいかなる損害に対して当方は一切責任を負いません。
-                            ◇著作権について
-                            ・改変の有無を問わず本モデルの著作権は本モデルの制作者であるRyoRIに帰属します。
-                            ◇改変・用途について
-                            ・本モデルは主としてVRChatにおける使用を想定しています。
-                            ・本モデルは規約の範囲内で自由に改変できます。
-                            ・本モデルを取り出せない形で組み込んだ作品による商用利用ができます。RyoRIのクレジットを明記してください。使用の報告は任意ですが、教えていただけると喜びます。
-                            ・本モデルでのR18、R18G用途での利用ができます。
-                            ・動画への映り込みは問題ありません。 ◇禁止事項
-                            ・改変の有無を問わず本モデルを再配付・販売することを禁止します。
-                            ・本モデルの全部または一部を第三者に提供することを禁止します。
-                            ・本モデルの全部または一部を、不特定多数が入手できるような形で公開することを禁止します。
-                            ・本モデルの制作者および配布者を騙ることを禁止します。
-                            ・本モデルを政治的および宗教的活動に利用することを禁止します。
-                            ・VRChatやそれに類似したサービスを除いて、インターネット上に本モデルをアップロードすることを禁止します。
-                            ・VRChat内にて使用する場合、本モデルを使用したアバターをPublic設定でのアップロード、またVRChat内でアバターペデスタル等を使用した配布を禁止します。
-                            （Private設定での使用は可能です）
-                            ◇本モデルは予告なく配布を停止、または使用を禁止する場合があります。
-                            ◇この利用規約は予告なく変更される事があります。規約は最新のものが適用されます。
                           </p>
                         </div>
                       </section>
@@ -429,6 +409,28 @@
                               <div class=
                               "search-guide-tablet-label-inner">
                                 VRChat
+                              </div>
+                            </div></a><a class=
+                            "search-guide-tablet" data-tracking=
+                            "click" data-product-list=
+                            "from market_show via tag_list to search_index"
+                            href=
+                            "https://booth.pm/ja/search/3D%E7%94%A8%E3%82%AA%E3%83%96%E3%82%B8%E3%82%A7%E3%82%AF%E3%83%88">
+                            <div class="search-guide-tablet-label">
+                              <div class=
+                              "search-guide-tablet-label-inner">
+                                3D用オブジェクト
+                              </div>
+                            </div></a><a class=
+                            "search-guide-tablet" data-tracking=
+                            "click" data-product-list=
+                            "from market_show via tag_list to search_index"
+                            href=
+                            "https://booth.pm/ja/search/3D%E3%82%AD%E3%83%A3%E3%83%A9%E3%82%AF%E3%82%BF%E3%83%BC%E7%94%A8%E8%A3%85%E9%A3%BE">
+                            <div class="search-guide-tablet-label">
+                              <div class=
+                              "search-guide-tablet-label-inner">
+                                3Dキャラクター用装飾
                               </div>
                             </div></a><a class=
                             "search-guide-tablet" data-tracking=
