--- a/VRChat/39/1148939.html
+++ b/VRChat/39/1148939.html
@@ -544,17 +544,6 @@
                             data-tracking="click"
                             data-product-list="from market_show via tag_list to search_index"
                             href=
-                            "https://booth.pm/ja/search/%E3%82%AA%E3%83%AA%E3%82%B8%E3%83%8A%E3%83%AB">
-                            <div class="search-guide-tablet-label">
-                              <div class=
-                              "search-guide-tablet-label-inner">
-                                オリジナル
-                              </div>
-                            </div></a><a class=
-                            "search-guide-tablet" data-tracking=
-                            "click" data-product-list=
-                            "from market_show via tag_list to search_index"
-                            href=
                             "https://booth.pm/ja/search/%E3%82%A2%E3%83%90%E3%82%BF%E3%83%BC">
                             <div class="search-guide-tablet-label">
                               <div class=
@@ -658,6 +647,17 @@
                               "search-guide-tablet-label-inner">
                                 バーチャルミュージアムA
                               </div>
+                            </div></a><a class=
+                            "search-guide-tablet" data-tracking=
+                            "click" data-product-list=
+                            "from market_show via tag_list to search_index"
+                            href=
+                            "https://booth.pm/ja/search/vrchat%E5%8F%AF%E8%83%BD">
+                            <div class="search-guide-tablet-label">
+                              <div class=
+                              "search-guide-tablet-label-inner">
+                                vrchat可能
+                              </div>
                             </div></a>
                           </div>
                         </div><a class=
@@ -670,9 +670,9 @@
                         "click" data-product-list=
                         "from market_show via tag_category_search to search_index"
                         href=
-                        "https://booth.pm/ja/browse/3D%E3%83%A2%E3%83%87%E3%83%AB?q=%E3%82%AA%E3%83%AA%E3%82%B8%E3%83%8A%E3%83%AB">
+                        "https://booth.pm/ja/browse/3D%E3%83%A2%E3%83%87%E3%83%AB?q=%E3%82%A2%E3%83%90%E3%82%BF%E3%83%BC">
                         <div class="search-label">
-                          オリジナル x 3Dモデル で検索
+                          アバター x 3Dモデル で検索
                         </div></a>
                       </div>
                     </div>
