updated at: 2020-02-21 17:10, 【VRChat用】NewVirtualKeyboard V2.1 - CHIU SHOP - BOOTH

--- a/VRChat/31/1135731.html
+++ b/VRChat/31/1135731.html
@@ -6,7 +6,7 @@
       【VRChat用】NewVirtualKeyboard V2.1 - CHIU SHOP - BOOTH
     </title>
     <meta name="description" content=
-    "このパッケージはVRChatでテキストチャットができるようになるプレハブセットになります！ 通常（無料）と投げイワシ（Boost用）がありますがどちらも同じ内容なのでご注意ください！">
+    "[English] Here are the text chat prefabs. All you need to do is add the prefab to your scene. Standard Assets is required. このパッケージはVRChatでテキストチャットができるようになるプレハブセットになります！ 通常（無料）と投げイワシ（Boost用）がありますがどちらも同じ内容なのでご注意ください！">
     <meta name="keywords" content=
     "booth, ブース, pixiv, ピクシブ, イラスト, マンガ, 創作, オンラインストア, オンラインショップ, ネットショップ, ec, ネット通販">
     <link rel="canonical" href="https://booth.pm/ja/items/1135731">
@@ -15,14 +15,14 @@
     <meta name="twitter:title" content=
     "【VRChat用】NewVirtualKeyboard V2.1 - CHIU SHOP - BOOTH">
     <meta name="twitter:description" content=
-    "このパッケージはVRChatでテキストチャットができるようになるプレハブセットになります！ 通常（無料）と投げイワシ（Boost用）がありますがどちらも同じ内容なのでご注意ください！">
+    "[English] Here are the text chat prefabs. All you need to do is add the prefab to your scene. Standard Assets is required. このパッケージはVRChatでテキストチャットができるようになるプレハブセットになります！ 通常（無料）と投げイワシ（Boost用）がありますがどちらも同じ内容なのでご注意ください！">
     <meta name="twitter:image" content=
     "https://booth.pximg.net/c/620x620/030a2645-c1e5-4596-84e0-6756664df27c/i/1135731/0e3d0bd7-2a01-4fa8-a3a0-9c2487554694_base_resized.jpg">
     <meta property="og:type" content="product">
     <meta property="og:title" content=
     "【VRChat用】NewVirtualKeyboard V2.1 - CHIU SHOP - BOOTH">
     <meta property="og:description" content=
-    "このパッケージはVRChatでテキストチャットができるようになるプレハブセットになります！ 通常（無料）と投げイワシ（Boost用）がありますがどちらも同じ内容なのでご注意ください！">
+    "[English] Here are the text chat prefabs. All you need to do is add the prefab to your scene. Standard Assets is required. このパッケージはVRChatでテキストチャットができるようになるプレハブセットになります！ 通常（無料）と投げイワシ（Boost用）がありますがどちらも同じ内容なのでご注意ください！">
     <meta property="og:image" content=
     "https://booth.pximg.net/c/620x620/030a2645-c1e5-4596-84e0-6756664df27c/i/1135731/0e3d0bd7-2a01-4fa8-a3a0-9c2487554694_base_resized.jpg">
     <meta property="og:url" content=
@@ -342,6 +342,10 @@
                         <div class=
                         "js-market-item-detail-description">
                           <p class="autolink u-text-wrap">
+                            [English] Here are the text chat
+                            prefabs. All you need to do is add the
+                            prefab to your scene. Standard Assets
+                            is required.
                             このパッケージはVRChatでテキストチャットができるようになるプレハブセットになります！
                             通常（無料）と投げイワシ（Boost用）がありますがどちらも同じ内容なのでご注意ください！
                           </p>
