updated at: 2020-02-22 02:08, 【オリジナル3Dモデル】VAL-3 &quot;ヴァルスリー&quot; - 贈答用ハグキ - BOOTH

--- a/VRChat/44/1239244.html
+++ b/VRChat/44/1239244.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>
-      【VRChat向けロボットモデル】VAL-3 "ヴァルスリー" - 贈答用ハグキ - BOOTH
+      【オリジナル3Dモデル】VAL-3 "ヴァルスリー" - 贈答用ハグキ - BOOTH
     </title>
     <meta name="description" content=
     "VRchat向けの搭乗可能オリジナルロボットモデル VAL-3 &quot;ヴァルスリー&quot; VRChatでの使用を想定した、コックピットを内蔵し搭乗可能なロボットアバターです。 製作者 okokhaguki 利用規約と既知の問題を確認した上で購入してください。">
@@ -13,20 +13,21 @@
     <meta name="twitter:site" content="booth_pm">
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:title" content=
-    "【VRChat向けロボットモデル】VAL-3 &quot;ヴァルスリー&quot; - 贈答用ハグキ - BOOTH">
+    "【オリジナル3Dモデル】VAL-3 &quot;ヴァルスリー&quot; - 贈答用ハグキ - BOOTH">
     <meta name="twitter:description" content=
     "VRchat向けの搭乗可能オリジナルロボットモデル VAL-3 &quot;ヴァルスリー&quot; VRChatでの使用を想定した、コックピットを内蔵し搭乗可能なロボットアバターです。 製作者 okokhaguki 利用規約と既知の問題を確認した上で購入してください。">
     <meta name="twitter:image" content=
     "https://booth.pximg.net/c/620x620/85f4986f-a2e9-455a-8c30-196e4b303fb5/i/1239244/1f043471-313a-4c06-b243-f6fcec5cd581_base_resized.jpg">
     <meta property="og:type" content="product">
     <meta property="og:title" content=
-    "【VRChat向けロボットモデル】VAL-3 &quot;ヴァルスリー&quot; - 贈答用ハグキ - BOOTH">
+    "【オリジナル3Dモデル】VAL-3 &quot;ヴァルスリー&quot; - 贈答用ハグキ - BOOTH">
     <meta property="og:description" content=
     "VRchat向けの搭乗可能オリジナルロボットモデル VAL-3 &quot;ヴァルスリー&quot; VRChatでの使用を想定した、コックピットを内蔵し搭乗可能なロボットアバターです。 製作者 okokhaguki 利用規約と既知の問題を確認した上で購入してください。">
     <meta property="og:image" content=
     "https://booth.pximg.net/c/620x620/85f4986f-a2e9-455a-8c30-196e4b303fb5/i/1239244/1f043471-313a-4c06-b243-f6fcec5cd581_base_resized.jpg">
     <meta property="og:url" content=
     "https://booth.pm/ja/items/1239244">
+    <meta name="ga:shop" content="UA-158889403-1">
     <meta name="skip_auto_login" content="">
     <meta name="ga_dimension1" content="customer">
     <meta name="ga_dimension2" content="no">
@@ -143,7 +144,7 @@
                         </div>
                         <h2 class=
                         "u-text-wrap u-tpg-title1 u-mt-0 u-mb-400">
-                          【VRChat向けロボットモデル】VAL-3 "ヴァルスリー"
+                          【オリジナル3Dモデル】VAL-3 "ヴァルスリー"
                         </h2>
                         <div class="item-summary__caption"></div>
                       </header>
@@ -237,7 +238,7 @@
                           "https://booth.pm/ja/items/1239244"
                           data-lang="ja" data-hashtags="booth_pm"
                           data-text=
-                          "【VRChat向けロボットモデル】VAL-3 &quot;ヴァルスリー&quot; | 贈答用ハグキ"
+                          "【オリジナル3Dモデル】VAL-3 &quot;ヴァルスリー&quot; | 贈答用ハグキ"
                           data-count="none" class=
                           "twitter-share-button" href=
                           "https://twitter.com/share">ツイート</a>
@@ -257,7 +258,7 @@
                           <div class=
                           "market-item-detail-item-image-wrapper">
                             <img alt=
-                            "【VRChat向けロボットモデル】VAL-3 &quot;ヴァルスリー&quot;"
+                            "【オリジナル3Dモデル】VAL-3 &quot;ヴァルスリー&quot;"
                             class="market-item-detail-item-image"
                             src=
                             "https://booth.pximg.net/85f4986f-a2e9-455a-8c30-196e4b303fb5/i/1239244/1f043471-313a-4c06-b243-f6fcec5cd581_base_resized.jpg">
@@ -267,7 +268,7 @@
                           <div class=
                           "market-item-detail-item-image-wrapper">
                             <img alt=
-                            "【VRChat向けロボットモデル】VAL-3 &quot;ヴァルスリー&quot;"
+                            "【オリジナル3Dモデル】VAL-3 &quot;ヴァルスリー&quot;"
                             class="market-item-detail-item-image"
                             data-lazy=
                             "https://booth.pximg.net/85f4986f-a2e9-455a-8c30-196e4b303fb5/i/1239244/a0bc32ce-78c1-45d9-a572-407f273708ad_base_resized.jpg">
@@ -277,7 +278,7 @@
                           <div class=
                           "market-item-detail-item-image-wrapper">
                             <img alt=
-                            "【VRChat向けロボットモデル】VAL-3 &quot;ヴァルスリー&quot;"
+                            "【オリジナル3Dモデル】VAL-3 &quot;ヴァルスリー&quot;"
                             class="market-item-detail-item-image"
                             data-lazy=
                             "https://booth.pximg.net/85f4986f-a2e9-455a-8c30-196e4b303fb5/i/1239244/e624c71e-a900-42cc-b4ed-2b36dd8e31de_base_resized.jpg">
@@ -287,7 +288,7 @@
                           <div class=
                           "market-item-detail-item-image-wrapper">
                             <img alt=
-                            "【VRChat向けロボットモデル】VAL-3 &quot;ヴァルスリー&quot;"
+                            "【オリジナル3Dモデル】VAL-3 &quot;ヴァルスリー&quot;"
                             class="market-item-detail-item-image"
                             data-lazy=
                             "https://booth.pximg.net/85f4986f-a2e9-455a-8c30-196e4b303fb5/i/1239244/2e1c6feb-2ea2-41a7-b5b4-7bf9c1b48756_base_resized.jpg">
