updated at: 2020-02-22 16:57, しあ式旧型スクール水着_forルア - かぷちやのぶーす - BOOTH

--- a/VRChat/23/1357623.html
+++ b/VRChat/23/1357623.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>
-      しあ式旧型スクール水着_forルア - かぷち屋のぶーす - BOOTH
+      しあ式旧型スクール水着_forルア - かぷちやのぶーす - BOOTH
     </title>
     <meta name="description" content=
     "マットな質感が絶妙なリアリティを演出！ 貧乳化も対応した△6918の旧スクです。 VR界に古典的な旧スクを普及するべく製品化しました。 Blenderアレルギーのために5分で終わる簡単セットアップファイル付き（ただしかがむとお腹が透ける） Blenderを用いた導入はこちらを参考 http://shiasakura.hatenablog.com/entry/2019/04/26/013114 －－－－－－－－－－　　以下Readmeファイル　　－－－－－－－－－－ この商品はfinaさんのオリジナルモデル「Lua」専用のスク水のモデルです。">
@@ -13,14 +13,14 @@
     <meta name="twitter:site" content="booth_pm">
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:title" content=
-    "しあ式旧型スクール水着_forルア - かぷち屋のぶーす - BOOTH">
+    "しあ式旧型スクール水着_forルア - かぷちやのぶーす - BOOTH">
     <meta name="twitter:description" content=
     "マットな質感が絶妙なリアリティを演出！ 貧乳化も対応した△6918の旧スクです。 VR界に古典的な旧スクを普及するべく製品化しました。 Blenderアレルギーのために5分で終わる簡単セットアップファイル付き（ただしかがむとお腹が透ける） Blenderを用いた導入はこちらを参考 http://shiasakura.hatenablog.com/entry/2019/04/26/013114 －－－－－－－－－－　　以下Readmeファイル　　－－－－－－－－－－ この商品はfinaさんのオリジナルモデル「Lua」専用のスク水のモデルです。">
     <meta name="twitter:image" content=
     "https://booth.pximg.net/c/620x620/fb6b1fad-86c2-45e3-89e8-e117c662ecc2/i/1357623/17941e5b-aa69-4a77-96cb-f6e8f0df5579_base_resized.jpg">
     <meta property="og:type" content="product">
     <meta property="og:title" content=
-    "しあ式旧型スクール水着_forルア - かぷち屋のぶーす - BOOTH">
+    "しあ式旧型スクール水着_forルア - かぷちやのぶーす - BOOTH">
     <meta property="og:description" content=
     "マットな質感が絶妙なリアリティを演出！ 貧乳化も対応した△6918の旧スクです。 VR界に古典的な旧スクを普及するべく製品化しました。 Blenderアレルギーのために5分で終わる簡単セットアップファイル付き（ただしかがむとお腹が透ける） Blenderを用いた導入はこちらを参考 http://shiasakura.hatenablog.com/entry/2019/04/26/013114 －－－－－－－－－－　　以下Readmeファイル　　－－－－－－－－－－ この商品はfinaさんのオリジナルモデル「Lua」専用のスク水のモデルです。">
     <meta property="og:image" content=
@@ -122,11 +122,11 @@
                           href="https://capettiya.booth.pm/">
                           <div class=
                           "u-d-flex u-align-items-center">
-                            <img alt="かぷち屋のぶーす" class=
+                            <img alt="かぷちやのぶーす" class=
                             "user-avatar at-item-summary" src=
                             "https://booth.pximg.net/c/48x48/users/381418/icon_image/6329b4dd-b639-457e-9b44-b6f6eeeb85a3_base_resized.jpg">
                             <div class="u-text-ellipsis">
-                              かぷち屋のぶーす
+                              かぷちやのぶーす
                             </div>
                           </div></a>
                         </div>
@@ -225,7 +225,7 @@
                           <a data-url=
                           "https://booth.pm/ja/items/1357623"
                           data-lang="ja" data-hashtags="booth_pm"
-                          data-text="しあ式旧型スクール水着_forルア | かぷち屋のぶーす"
+                          data-text="しあ式旧型スクール水着_forルア | かぷちやのぶーす"
                           data-count="none" class=
                           "twitter-share-button" href=
                           "https://twitter.com/share">ツイート</a>
