--- a/VRChat/76/1148976.html
+++ b/VRChat/76/1148976.html
@@ -27,6 +27,7 @@
     "https://booth.pximg.net/c/620x620/85f4986f-a2e9-455a-8c30-196e4b303fb5/i/1148976/31ee4bba-dd57-4e6a-bb0e-bf81ce0936ba_base_resized.jpg">
     <meta property="og:url" content=
     "https://booth.pm/ja/items/1148976">
+    <meta name="ga:shop" content="UA-158889403-1">
     <meta name="skip_auto_login" content="">
     <meta name="ga_dimension1" content="customer">
     <meta name="ga_dimension2" content="no">
