updated at: 2020-02-22 22:38, たまこ＆モカMMDセット - かぷちやのぶーす - BOOTH

--- a/VRChat/40/944440.html
+++ b/VRChat/40/944440.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>
-      たまこ＆モカMMDセット - かぷち屋のぶーす - BOOTH
+      たまこ＆モカMMDセット - かぷちやのぶーす - BOOTH
     </title>
     <meta name="description" content=
     "多摩ワールドコーヒーのPRキャラクター たまこ モカ のMMD用のモデルデータのセットです。 VRChat使用可。 たまこの本やグッズ等がありますので ブースのその他の商品もぜひ見ていってください。 FANBOXも開設中です。 ■ 利用規約 ・著作権は全てかぷち屋のしあ・ぷもにあります。 ・商用利用・再配布は禁止します。 ・改変はOKです。 （再配布の中にVRChatへのアップロードは含まれません）">
@@ -13,14 +13,14 @@
     <meta name="twitter:site" content="booth_pm">
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:title" content=
-    "たまこ＆モカMMDセット - かぷち屋のぶーす - BOOTH">
+    "たまこ＆モカMMDセット - かぷちやのぶーす - BOOTH">
     <meta name="twitter:description" content=
     "多摩ワールドコーヒーのPRキャラクター たまこ モカ のMMD用のモデルデータのセットです。 VRChat使用可。 たまこの本やグッズ等がありますので ブースのその他の商品もぜひ見ていってください。 FANBOXも開設中です。 ■ 利用規約 ・著作権は全てかぷち屋のしあ・ぷもにあります。 ・商用利用・再配布は禁止します。 ・改変はOKです。 （再配布の中にVRChatへのアップロードは含まれません）">
     <meta name="twitter:image" content=
     "https://booth.pximg.net/c/620x620/fb6b1fad-86c2-45e3-89e8-e117c662ecc2/i/944440/ab5712ff-cdcb-4733-a833-73dd31d491e8_base_resized.jpg">
     <meta property="og:type" content="product">
     <meta property="og:title" content=
-    "たまこ＆モカMMDセット - かぷち屋のぶーす - BOOTH">
+    "たまこ＆モカMMDセット - かぷちやのぶーす - BOOTH">
     <meta property="og:description" content=
     "多摩ワールドコーヒーのPRキャラクター たまこ モカ のMMD用のモデルデータのセットです。 VRChat使用可。 たまこの本やグッズ等がありますので ブースのその他の商品もぜひ見ていってください。 FANBOXも開設中です。 ■ 利用規約 ・著作権は全てかぷち屋のしあ・ぷもにあります。 ・商用利用・再配布は禁止します。 ・改変はOKです。 （再配布の中にVRChatへのアップロードは含まれません）">
     <meta property="og:image" content=
@@ -122,11 +122,11 @@
                           href="https://capettiya.booth.pm/">
                           <div class=
                           "u-d-flex u-align-items-center">
-                            <img alt="かぷち屋のぶーす" class=
+                            <img alt="かぷちやのぶーす" class=
                             "user-avatar at-item-summary" src=
                             "https://booth.pximg.net/c/48x48/users/381418/icon_image/6329b4dd-b639-457e-9b44-b6f6eeeb85a3_base_resized.jpg">
                             <div class="u-text-ellipsis">
-                              かぷち屋のぶーす
+                              かぷちやのぶーす
                             </div>
                           </div></a>
                         </div>
@@ -275,7 +275,7 @@
                           <a data-url=
                           "https://booth.pm/ja/items/944440"
                           data-lang="ja" data-hashtags="booth_pm"
-                          data-text="たまこ＆モカMMDセット | かぷち屋のぶーす"
+                          data-text="たまこ＆モカMMDセット | かぷちやのぶーす"
                           data-count="none" class=
                           "twitter-share-button" href=
                           "https://twitter.com/share">ツイート</a>
