updated at: 2020-02-23 01:45, コーヒー器具セット - かぷちやのぶーす - BOOTH

--- a/VRChat/52/1264152.html
+++ b/VRChat/52/1264152.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>
-      コーヒー器具セット - かぷち屋のぶーす - BOOTH
+      コーヒー器具セット - かぷちやのぶーす - BOOTH
     </title>
     <meta name="description" content=
     "コーヒーの器具の詰め合わせセットです。 内容物 ドリップ用サーバー、ろ紙、ろうと、ケトル コーヒーサイフォン マキネッタ コーヒーミル 使い方 Unitypackageをインポートしてください。 いい感じに使ってください。 利用規約 改変：可 商用利用；可 再配布、本データを含めた販売：不可 アバターやワールドへの同梱：可">
@@ -13,14 +13,14 @@
     <meta name="twitter:site" content="booth_pm">
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:title" content=
-    "コーヒー器具セット - かぷち屋のぶーす - BOOTH">
+    "コーヒー器具セット - かぷちやのぶーす - BOOTH">
     <meta name="twitter:description" content=
     "コーヒーの器具の詰め合わせセットです。 内容物 ドリップ用サーバー、ろ紙、ろうと、ケトル コーヒーサイフォン マキネッタ コーヒーミル 使い方 Unitypackageをインポートしてください。 いい感じに使ってください。 利用規約 改変：可 商用利用；可 再配布、本データを含めた販売：不可 アバターやワールドへの同梱：可">
     <meta name="twitter:image" content=
     "https://booth.pximg.net/c/620x620/fb6b1fad-86c2-45e3-89e8-e117c662ecc2/i/1264152/d8025052-efee-42f7-9228-69ee35c530ff_base_resized.jpg">
     <meta property="og:type" content="product">
     <meta property="og:title" content=
-    "コーヒー器具セット - かぷち屋のぶーす - BOOTH">
+    "コーヒー器具セット - かぷちやのぶーす - BOOTH">
     <meta property="og:description" content=
     "コーヒーの器具の詰め合わせセットです。 内容物 ドリップ用サーバー、ろ紙、ろうと、ケトル コーヒーサイフォン マキネッタ コーヒーミル 使い方 Unitypackageをインポートしてください。 いい感じに使ってください。 利用規約 改変：可 商用利用；可 再配布、本データを含めた販売：不可 アバターやワールドへの同梱：可">
     <meta property="og:image" content=
@@ -134,11 +134,11 @@
                           href="https://capettiya.booth.pm/">
                           <div class=
                           "u-d-flex u-align-items-center">
-                            <img alt="かぷち屋のぶーす" class=
+                            <img alt="かぷちやのぶーす" class=
                             "user-avatar at-item-summary" src=
                             "https://booth.pximg.net/c/48x48/users/381418/icon_image/6329b4dd-b639-457e-9b44-b6f6eeeb85a3_base_resized.jpg">
                             <div class="u-text-ellipsis">
-                              かぷち屋のぶーす
+                              かぷちやのぶーす
                             </div>
                           </div></a>
                         </div>
@@ -237,7 +237,7 @@
                           <a data-url=
                           "https://booth.pm/ja/items/1264152"
                           data-lang="ja" data-hashtags="booth_pm"
-                          data-text="コーヒー器具セット | かぷち屋のぶーす"
+                          data-text="コーヒー器具セット | かぷちやのぶーす"
                           data-count="none" class=
                           "twitter-share-button" href=
                           "https://twitter.com/share">ツイート</a>
