updated at: 2020-02-23 03:11, VRCHATのほん - かぷちやのぶーす - BOOTH

--- a/VRChat/36/1223136.html
+++ b/VRChat/36/1223136.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>
-      VRCHATのほん - かぷち屋のぶーす - BOOTH
+      VRCHATのほん - かぷちやのぶーす - BOOTH
     </title>
     <meta name="description" content=
     "VRChatのかわいいフレンド達を描いたイラスト集を作りました! みんな可愛いので是非見てくださいね。 ‐‐‐‐‐‐2020/02/06追記‐‐‐‐‐‐ 電子書籍版に高解像度版PDFを追加しました！ ‐‐‐‐‐‐2020/02/02追記‐‐‐‐‐‐ 電子書籍版追加しました！ 全18ページ PDFファイル">
@@ -13,14 +13,14 @@
     <meta name="twitter:site" content="booth_pm">
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:title" content=
-    "VRCHATのほん - かぷち屋のぶーす - BOOTH">
+    "VRCHATのほん - かぷちやのぶーす - BOOTH">
     <meta name="twitter:description" content=
     "VRChatのかわいいフレンド達を描いたイラスト集を作りました! みんな可愛いので是非見てくださいね。 ‐‐‐‐‐‐2020/02/06追記‐‐‐‐‐‐ 電子書籍版に高解像度版PDFを追加しました！ ‐‐‐‐‐‐2020/02/02追記‐‐‐‐‐‐ 電子書籍版追加しました！ 全18ページ PDFファイル">
     <meta name="twitter:image" content=
     "https://booth.pximg.net/c/620x620/fb6b1fad-86c2-45e3-89e8-e117c662ecc2/i/1223136/ff63a157-73f2-4989-a3bf-f018c82be30a_base_resized.jpg">
     <meta property="og:type" content="product">
     <meta property="og:title" content=
-    "VRCHATのほん - かぷち屋のぶーす - BOOTH">
+    "VRCHATのほん - かぷちやのぶーす - BOOTH">
     <meta property="og:description" content=
     "VRChatのかわいいフレンド達を描いたイラスト集を作りました! みんな可愛いので是非見てくださいね。 ‐‐‐‐‐‐2020/02/06追記‐‐‐‐‐‐ 電子書籍版に高解像度版PDFを追加しました！ ‐‐‐‐‐‐2020/02/02追記‐‐‐‐‐‐ 電子書籍版追加しました！ 全18ページ PDFファイル">
     <meta property="og:image" content=
@@ -135,11 +135,11 @@
                           href="https://capettiya.booth.pm/">
                           <div class=
                           "u-d-flex u-align-items-center">
-                            <img alt="かぷち屋のぶーす" class=
+                            <img alt="かぷちやのぶーす" class=
                             "user-avatar at-item-summary" src=
                             "https://booth.pximg.net/c/48x48/users/381418/icon_image/6329b4dd-b639-457e-9b44-b6f6eeeb85a3_base_resized.jpg">
                             <div class="u-text-ellipsis">
-                              かぷち屋のぶーす
+                              かぷちやのぶーす
                             </div>
                           </div></a>
                         </div>
@@ -309,7 +309,7 @@
                           <a data-url=
                           "https://booth.pm/ja/items/1223136"
                           data-lang="ja" data-hashtags="booth_pm"
-                          data-text="VRCHATのほん | かぷち屋のぶーす"
+                          data-text="VRCHATのほん | かぷちやのぶーす"
                           data-count="none" class=
                           "twitter-share-button" href=
                           "https://twitter.com/share">ツイート</a>
