--- a/VRChat/47/1085447.html
+++ b/VRChat/47/1085447.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>
-      コート - ショップ名思いつかなかった - BOOTH
+      コート - サークル名思いつかなかった - BOOTH
     </title>
     <meta name="description" content=
     "利用規約 ■許可行為 ・モデルの改変 ・改変モデルのVRChat、類似SNSでのアバターとしての利用 ・Vtuber・MMDを含む動画、静画での使用 ・Youtubeで本モデルを使用した動画の広告収入による商用利用 ・本モデル及び改変モデルを使用したゲームの販売 　※モデルデータとしてそのまま使用可能なデータが含まれる場合は禁止します。 ■禁止行為 ・本モデル及び改変モデルのモデルデータ販売による商用利用、及び再配布 ・本モデルの二次配布及び自作発言 ・VRchatでのアバターペデスタル、本モデルが含まれるMODの配布 ・改変モデルの完全自作発言(改変をフルスクラッチと偽る事)">
@@ -13,14 +13,14 @@
     <meta name="twitter:site" content="booth_pm">
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:title" content=
-    "コート - ショップ名思いつかなかった - BOOTH">
+    "コート - サークル名思いつかなかった - BOOTH">
     <meta name="twitter:description" content=
     "利用規約 ■許可行為 ・モデルの改変 ・改変モデルのVRChat、類似SNSでのアバターとしての利用 ・Vtuber・MMDを含む動画、静画での使用 ・Youtubeで本モデルを使用した動画の広告収入による商用利用 ・本モデル及び改変モデルを使用したゲームの販売 　※モデルデータとしてそのまま使用可能なデータが含まれる場合は禁止します。 ■禁止行為 ・本モデル及び改変モデルのモデルデータ販売による商用利用、及び再配布 ・本モデルの二次配布及び自作発言 ・VRchatでのアバターペデスタル、本モデルが含まれるMODの配布 ・改変モデルの完全自作発言(改変をフルスクラッチと偽る事)">
     <meta name="twitter:image" content=
     "https://booth.pximg.net/c/620x620/e646211e-4d2a-4fbc-98f6-a3b5f82fd477/i/1085447/df9bf8ff-fcee-4394-a113-83b23fdcd61f_base_resized.jpg">
     <meta property="og:type" content="product">
     <meta property="og:title" content=
-    "コート - ショップ名思いつかなかった - BOOTH">
+    "コート - サークル名思いつかなかった - BOOTH">
     <meta property="og:description" content=
     "利用規約 ■許可行為 ・モデルの改変 ・改変モデルのVRChat、類似SNSでのアバターとしての利用 ・Vtuber・MMDを含む動画、静画での使用 ・Youtubeで本モデルを使用した動画の広告収入による商用利用 ・本モデル及び改変モデルを使用したゲームの販売 　※モデルデータとしてそのまま使用可能なデータが含まれる場合は禁止します。 ■禁止行為 ・本モデル及び改変モデルのモデルデータ販売による商用利用、及び再配布 ・本モデルの二次配布及び自作発言 ・VRchatでのアバターペデスタル、本モデルが含まれるMODの配布 ・改変モデルの完全自作発言(改変をフルスクラッチと偽る事)">
     <meta property="og:image" content=
@@ -134,11 +134,11 @@
                           href="https://shikinomiya.booth.pm/">
                           <div class=
                           "u-d-flex u-align-items-center">
-                            <img alt="ショップ名思いつかなかった" class=
+                            <img alt="サークル名思いつかなかった" class=
                             "user-avatar at-item-summary" src=
                             "https://booth.pximg.net/c/48x48/users/3310159/icon_image/f9c5a3fb-bb39-4de2-9f0d-5e4caa6b673e_base_resized.jpg">
                             <div class="u-text-ellipsis">
-                              ショップ名思いつかなかった
+                              サークル名思いつかなかった
                             </div>
                           </div></a>
                         </div>
@@ -237,7 +237,7 @@
                           <a data-url=
                           "https://booth.pm/ja/items/1085447"
                           data-lang="ja" data-hashtags="booth_pm"
-                          data-text="コート | ショップ名思いつかなかった"
+                          data-text="コート | サークル名思いつかなかった"
                           data-count="none" class=
                           "twitter-share-button" href=
                           "https://twitter.com/share">ツイート</a>
