updated at: 2020-02-23 19:13, 【MMD】【VRC】リアル骸骨モデル - ショップByNEET - BOOTH

--- a/VRChat/35/1324435.html
+++ b/VRChat/35/1324435.html
@@ -6,7 +6,7 @@
       【MMD】【VRC】リアル骸骨モデル - ショップByNEET - BOOTH
     </title>
     <meta name="description" content=
-    "リアルな人体骨格の3DCGモデルです。 昔モデリングだけしてた素材にボーンとか入れて完成させたものになります。 ◆形式 ・MMD用のPMXファイル、 ・Unity用のFBXファイル、 ・VRChat用のUnityパッケージ、 ・メタセコイア用のMQOファイル が入っています。 そのままMMDで踊れるしVRCで使えます。 ◆テクスチャ ２Kの解像度のテクスチャとノーマルマップが入っています。 ◆ポリゴン数 ４角ポリゴンで２３０００ポリゴン程です。 ◆利用規約 勝手に再配布以外の行為なら、ゲーム利用、動画利用、 何をしてくれても多分オッケーです。">
+    "リアルな人体骨格の3DCGモデルです。 昔モデリングだけしてた素材にボーンとか入れて完成させたものになります。 ◆形式 ・MMD用のPMXファイル、 ・Unity用のFBXファイル、 ・VRChat用のUnityパッケージ、 ・メタセコイア用のMQOファイル が入っています。 ボーン形式はHumanoid形式です。 そのままMMDで踊れるしVRCで使えます。 ◆テクスチャ ２Kの解像度のテクスチャとノーマルマップが入っています。 ◆ポリゴン数 ４角ポリゴンで２３０００ポリゴン程です。 ◆利用規約 勝手に再配布以外の行為なら、ゲーム利用、動画利用、 何をしてくれても多分オッケーです。">
     <meta name="keywords" content=
     "booth, ブース, pixiv, ピクシブ, イラスト, マンガ, 創作, オンラインストア, オンラインショップ, ネットショップ, ec, ネット通販">
     <link rel="canonical" href="https://booth.pm/ja/items/1324435">
@@ -15,14 +15,14 @@
     <meta name="twitter:title" content=
     "【MMD】【VRC】リアル骸骨モデル - ショップByNEET - BOOTH">
     <meta name="twitter:description" content=
-    "リアルな人体骨格の3DCGモデルです。 昔モデリングだけしてた素材にボーンとか入れて完成させたものになります。 ◆形式 ・MMD用のPMXファイル、 ・Unity用のFBXファイル、 ・VRChat用のUnityパッケージ、 ・メタセコイア用のMQOファイル が入っています。 そのままMMDで踊れるしVRCで使えます。 ◆テクスチャ ２Kの解像度のテクスチャとノーマルマップが入っています。 ◆ポリゴン数 ４角ポリゴンで２３０００ポリゴン程です。 ◆利用規約 勝手に再配布以外の行為なら、ゲーム利用、動画利用、 何をしてくれても多分オッケーです。">
+    "リアルな人体骨格の3DCGモデルです。 昔モデリングだけしてた素材にボーンとか入れて完成させたものになります。 ◆形式 ・MMD用のPMXファイル、 ・Unity用のFBXファイル、 ・VRChat用のUnityパッケージ、 ・メタセコイア用のMQOファイル が入っています。 ボーン形式はHumanoid形式です。 そのままMMDで踊れるしVRCで使えます。 ◆テクスチャ ２Kの解像度のテクスチャとノーマルマップが入っています。 ◆ポリゴン数 ４角ポリゴンで２３０００ポリゴン程です。 ◆利用規約 勝手に再配布以外の行為なら、ゲーム利用、動画利用、 何をしてくれても多分オッケーです。">
     <meta name="twitter:image" content=
     "https://booth.pximg.net/c/620x620/9b436d1b-ecc9-44b3-a4c7-a14f856c56f0/i/1324435/52d2efc7-3f4e-4ebd-a24c-dd3777b0f725_base_resized.jpg">
     <meta property="og:type" content="product">
     <meta property="og:title" content=
     "【MMD】【VRC】リアル骸骨モデル - ショップByNEET - BOOTH">
     <meta property="og:description" content=
-    "リアルな人体骨格の3DCGモデルです。 昔モデリングだけしてた素材にボーンとか入れて完成させたものになります。 ◆形式 ・MMD用のPMXファイル、 ・Unity用のFBXファイル、 ・VRChat用のUnityパッケージ、 ・メタセコイア用のMQOファイル が入っています。 そのままMMDで踊れるしVRCで使えます。 ◆テクスチャ ２Kの解像度のテクスチャとノーマルマップが入っています。 ◆ポリゴン数 ４角ポリゴンで２３０００ポリゴン程です。 ◆利用規約 勝手に再配布以外の行為なら、ゲーム利用、動画利用、 何をしてくれても多分オッケーです。">
+    "リアルな人体骨格の3DCGモデルです。 昔モデリングだけしてた素材にボーンとか入れて完成させたものになります。 ◆形式 ・MMD用のPMXファイル、 ・Unity用のFBXファイル、 ・VRChat用のUnityパッケージ、 ・メタセコイア用のMQOファイル が入っています。 ボーン形式はHumanoid形式です。 そのままMMDで踊れるしVRCで使えます。 ◆テクスチャ ２Kの解像度のテクスチャとノーマルマップが入っています。 ◆ポリゴン数 ４角ポリゴンで２３０００ポリゴン程です。 ◆利用規約 勝手に再配布以外の行為なら、ゲーム利用、動画利用、 何をしてくれても多分オッケーです。">
     <meta property="og:image" content=
     "https://booth.pximg.net/c/620x620/9b436d1b-ecc9-44b3-a4c7-a14f856c56f0/i/1324435/52d2efc7-3f4e-4ebd-a24c-dd3777b0f725_base_resized.jpg">
     <meta property="og:url" content=
@@ -328,7 +328,8 @@
                             昔モデリングだけしてた素材にボーンとか入れて完成させたものになります。 ◆形式
                             ・MMD用のPMXファイル、 ・Unity用のFBXファイル、
                             ・VRChat用のUnityパッケージ、 ・メタセコイア用のMQOファイル
-                            が入っています。 そのままMMDで踊れるしVRCで使えます。 ◆テクスチャ
+                            が入っています。 ボーン形式はHumanoid形式です。
+                            そのままMMDで踊れるしVRCで使えます。 ◆テクスチャ
                             ２Kの解像度のテクスチャとノーマルマップが入っています。 ◆ポリゴン数
                             ４角ポリゴンで２３０００ポリゴン程です。 ◆利用規約
                             勝手に再配布以外の行為なら、ゲーム利用、動画利用、
