--- a/VRChat/42/1064142.html
+++ b/VRChat/42/1064142.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>
-      3Dモデル「ファルシア」 - ショップ名思いつかなかった - BOOTH
+      3Dモデル「ファルシア」 - サークル名思いつかなかった - BOOTH
     </title>
     <meta name="description" content=
     "■デザイン・ポリゴン数的にかなりの余白と余裕を持たせたモデルなのでお手持ちの別オブジェクトデータや簡単なパーツでカスタムしやすいかと思います。 ■ドレス内部の肌パーツは一切消してありません、またドレスと素体は別オブジェクトにしてあります。">
@@ -13,14 +13,14 @@
     <meta name="twitter:site" content="booth_pm">
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:title" content=
-    "3Dモデル「ファルシア」 - ショップ名思いつかなかった - BOOTH">
+    "3Dモデル「ファルシア」 - サークル名思いつかなかった - BOOTH">
     <meta name="twitter:description" content=
     "■デザイン・ポリゴン数的にかなりの余白と余裕を持たせたモデルなのでお手持ちの別オブジェクトデータや簡単なパーツでカスタムしやすいかと思います。 ■ドレス内部の肌パーツは一切消してありません、またドレスと素体は別オブジェクトにしてあります。">
     <meta name="twitter:image" content=
     "https://booth.pximg.net/c/620x620/e646211e-4d2a-4fbc-98f6-a3b5f82fd477/i/1064142/d35cc8a2-0274-49cf-84c2-8605ef037978_base_resized.jpg">
     <meta property="og:type" content="product">
     <meta property="og:title" content=
-    "3Dモデル「ファルシア」 - ショップ名思いつかなかった - BOOTH">
+    "3Dモデル「ファルシア」 - サークル名思いつかなかった - BOOTH">
     <meta property="og:description" content=
     "■デザイン・ポリゴン数的にかなりの余白と余裕を持たせたモデルなのでお手持ちの別オブジェクトデータや簡単なパーツでカスタムしやすいかと思います。 ■ドレス内部の肌パーツは一切消してありません、またドレスと素体は別オブジェクトにしてあります。">
     <meta property="og:image" content=
@@ -134,11 +134,11 @@
                           href="https://shikinomiya.booth.pm/">
                           <div class=
                           "u-d-flex u-align-items-center">
-                            <img alt="ショップ名思いつかなかった" class=
+                            <img alt="サークル名思いつかなかった" class=
                             "user-avatar at-item-summary" src=
                             "https://booth.pximg.net/c/48x48/users/3310159/icon_image/f9c5a3fb-bb39-4de2-9f0d-5e4caa6b673e_base_resized.jpg">
                             <div class="u-text-ellipsis">
-                              ショップ名思いつかなかった
+                              サークル名思いつかなかった
                             </div>
                           </div></a>
                         </div>
@@ -237,7 +237,7 @@
                           <a data-url=
                           "https://booth.pm/ja/items/1064142"
                           data-lang="ja" data-hashtags="booth_pm"
-                          data-text="3Dモデル「ファルシア」 | ショップ名思いつかなかった"
+                          data-text="3Dモデル「ファルシア」 | サークル名思いつかなかった"
                           data-count="none" class=
                           "twitter-share-button" href=
                           "https://twitter.com/share">ツイート</a>
