--- a/VRChat/72/1063372.html
+++ b/VRChat/72/1063372.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>
-      ボクセルメイドちゃん - ショップ名思いつかなかった - BOOTH
+      ボクセルメイドちゃん - サークル名思いつかなかった - BOOTH
     </title>
     <meta name="description" content=
     "ボクセルを試しに使ってみた際に作った3Dモデルです。 Blender/fbx/voxファイルが入っています">
@@ -13,14 +13,14 @@
     <meta name="twitter:site" content="booth_pm">
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:title" content=
-    "ボクセルメイドちゃん - ショップ名思いつかなかった - BOOTH">
+    "ボクセルメイドちゃん - サークル名思いつかなかった - BOOTH">
     <meta name="twitter:description" content=
     "ボクセルを試しに使ってみた際に作った3Dモデルです。 Blender/fbx/voxファイルが入っています">
     <meta name="twitter:image" content=
     "https://booth.pximg.net/c/620x620/e646211e-4d2a-4fbc-98f6-a3b5f82fd477/i/1063372/896b8697-dae6-4497-be87-e8a37b2f6417_base_resized.jpg">
     <meta property="og:type" content="product">
     <meta property="og:title" content=
-    "ボクセルメイドちゃん - ショップ名思いつかなかった - BOOTH">
+    "ボクセルメイドちゃん - サークル名思いつかなかった - BOOTH">
     <meta property="og:description" content=
     "ボクセルを試しに使ってみた際に作った3Dモデルです。 Blender/fbx/voxファイルが入っています">
     <meta property="og:image" content=
@@ -122,11 +122,11 @@
                           href="https://shikinomiya.booth.pm/">
                           <div class=
                           "u-d-flex u-align-items-center">
-                            <img alt="ショップ名思いつかなかった" class=
+                            <img alt="サークル名思いつかなかった" class=
                             "user-avatar at-item-summary" src=
                             "https://booth.pximg.net/c/48x48/users/3310159/icon_image/f9c5a3fb-bb39-4de2-9f0d-5e4caa6b673e_base_resized.jpg">
                             <div class="u-text-ellipsis">
-                              ショップ名思いつかなかった
+                              サークル名思いつかなかった
                             </div>
                           </div></a>
                         </div>
@@ -208,7 +208,7 @@
                           <a data-url=
                           "https://booth.pm/ja/items/1063372"
                           data-lang="ja" data-hashtags="booth_pm"
-                          data-text="ボクセルメイドちゃん | ショップ名思いつかなかった"
+                          data-text="ボクセルメイドちゃん | サークル名思いつかなかった"
                           data-count="none" class=
                           "twitter-share-button" href=
                           "https://twitter.com/share">ツイート</a>
