updated at: 2020-02-24 15:46, 【MMD】【Unity】リアルサメモデル - ショップByNEET - BOOTH

--- a/VRChat/54/1384654.html
+++ b/VRChat/54/1384654.html
@@ -6,7 +6,7 @@
       【MMD】【Unity】リアルサメモデル - ショップByNEET - BOOTH
     </title>
     <meta name="description" content=
-    "自分用として作ったサメですが、 MMD用のリアルなサメモデルとか無いなぁとも思っているので、配ってみます。 ◆形式 ・MMD用のPMXファイル、 ・Unity用のFBXファイル、 ・VRChat用のUnityパッケージ、 ・メタセコイア用のMQOZファイル が入っています。 そのままMMDで踊れるしVRCでも使えます。 （不足があったら困る場合があるかもで、意味もなく指や足のボーンも入っていますが、別に削っても問題ない筈です） ◆テクスチャ ４Kの解像度のテクスチャとノーマルマップと、 透明マップが入っています。 このサメモデルのヒレにはアルファ抜きの要素もあって、">
+    "自分用として作ったサメですが、 MMD用のリアルなサメモデルとか無いなぁとも思っているので、配ってみます。 ◆形式 ・MMD用のPMXファイル、 ・Unity用のFBXファイル、 ・VRChat用のUnityパッケージ、 ・メタセコイア用のMQOZファイル が入っています。 ボーン形式はHumanoid形式です。 そのままMMDで踊れるしVRCでも使えます。 （不足があったら困る場合があるかもで、意味もなく指や足のボーンも入っていますが、別に削っても問題ない筈です） ◆テクスチャ ４Kの解像度のテクスチャとノーマルマップと、 透明マップが入っています。">
     <meta name="keywords" content=
     "booth, ブース, pixiv, ピクシブ, イラスト, マンガ, 創作, オンラインストア, オンラインショップ, ネットショップ, ec, ネット通販">
     <link rel="canonical" href="https://booth.pm/ja/items/1384654">
@@ -15,14 +15,14 @@
     <meta name="twitter:title" content=
     "【MMD】【Unity】リアルサメモデル - ショップByNEET - BOOTH">
     <meta name="twitter:description" content=
-    "自分用として作ったサメですが、 MMD用のリアルなサメモデルとか無いなぁとも思っているので、配ってみます。 ◆形式 ・MMD用のPMXファイル、 ・Unity用のFBXファイル、 ・VRChat用のUnityパッケージ、 ・メタセコイア用のMQOZファイル が入っています。 そのままMMDで踊れるしVRCでも使えます。 （不足があったら困る場合があるかもで、意味もなく指や足のボーンも入っていますが、別に削っても問題ない筈です） ◆テクスチャ ４Kの解像度のテクスチャとノーマルマップと、 透明マップが入っています。 このサメモデルのヒレにはアルファ抜きの要素もあって、">
+    "自分用として作ったサメですが、 MMD用のリアルなサメモデルとか無いなぁとも思っているので、配ってみます。 ◆形式 ・MMD用のPMXファイル、 ・Unity用のFBXファイル、 ・VRChat用のUnityパッケージ、 ・メタセコイア用のMQOZファイル が入っています。 ボーン形式はHumanoid形式です。 そのままMMDで踊れるしVRCでも使えます。 （不足があったら困る場合があるかもで、意味もなく指や足のボーンも入っていますが、別に削っても問題ない筈です） ◆テクスチャ ４Kの解像度のテクスチャとノーマルマップと、 透明マップが入っています。">
     <meta name="twitter:image" content=
     "https://booth.pximg.net/c/620x620/9b436d1b-ecc9-44b3-a4c7-a14f856c56f0/i/1384654/46b95d58-4523-4770-9fc6-543c65f78faa_base_resized.jpg">
     <meta property="og:type" content="product">
     <meta property="og:title" content=
     "【MMD】【Unity】リアルサメモデル - ショップByNEET - BOOTH">
     <meta property="og:description" content=
-    "自分用として作ったサメですが、 MMD用のリアルなサメモデルとか無いなぁとも思っているので、配ってみます。 ◆形式 ・MMD用のPMXファイル、 ・Unity用のFBXファイル、 ・VRChat用のUnityパッケージ、 ・メタセコイア用のMQOZファイル が入っています。 そのままMMDで踊れるしVRCでも使えます。 （不足があったら困る場合があるかもで、意味もなく指や足のボーンも入っていますが、別に削っても問題ない筈です） ◆テクスチャ ４Kの解像度のテクスチャとノーマルマップと、 透明マップが入っています。 このサメモデルのヒレにはアルファ抜きの要素もあって、">
+    "自分用として作ったサメですが、 MMD用のリアルなサメモデルとか無いなぁとも思っているので、配ってみます。 ◆形式 ・MMD用のPMXファイル、 ・Unity用のFBXファイル、 ・VRChat用のUnityパッケージ、 ・メタセコイア用のMQOZファイル が入っています。 ボーン形式はHumanoid形式です。 そのままMMDで踊れるしVRCでも使えます。 （不足があったら困る場合があるかもで、意味もなく指や足のボーンも入っていますが、別に削っても問題ない筈です） ◆テクスチャ ４Kの解像度のテクスチャとノーマルマップと、 透明マップが入っています。">
     <meta property="og:image" content=
     "https://booth.pximg.net/c/620x620/9b436d1b-ecc9-44b3-a4c7-a14f856c56f0/i/1384654/46b95d58-4523-4770-9fc6-543c65f78faa_base_resized.jpg">
     <meta property="og:url" content=
@@ -419,7 +419,8 @@
                             MMD用のリアルなサメモデルとか無いなぁとも思っているので、配ってみます。
                             ◆形式 ・MMD用のPMXファイル、 ・Unity用のFBXファイル、
                             ・VRChat用のUnityパッケージ、 ・メタセコイア用のMQOZファイル
-                            が入っています。 そのままMMDで踊れるしVRCでも使えます。
+                            が入っています。 ボーン形式はHumanoid形式です。
+                            そのままMMDで踊れるしVRCでも使えます。
                             （不足があったら困る場合があるかもで、意味もなく指や足のボーンも入っていますが、別に削っても問題ない筈です）
                             ◆テクスチャ ４Kの解像度のテクスチャとノーマルマップと、
                             透明マップが入っています。
